added more link text

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
         <body>
             <h1>RUN BUDDY</h1>
-            Waht We Do
+            Waht We Do What You Do Your Trainers Reach Out
 
 
         </body>
