--- a/index.html
+++ b/index.html
@@ -41,6 +41,13 @@
   
          <!-- hero/jumbotron -->
          <section class="hero">
+        <!-- New Heading here -->
+             <div class="hero-heading">
+                 <h2>Start Building Habits</h2>
+                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Porro dolor dolorem quibusdam nulla debitis voluptas alias quia earum inventore a, dignissimos est mollitia labore iste magnam officiis commodi doloribus obcaecati.
+                 </p>
+             </div>
+        <!-- End new heading -->
             <div class="hero-form">
                 <h3>Get Started Today</h3>
                 <p>Fill out this form and one of our trainers will schedule a consult</p>
