--- a/index.html
+++ b/index.html
@@ -168,19 +168,36 @@
                     loading="lazy">
                     </iframe>
 
-                    <h3>Run Buddy</h3>
-                    <p>
-                      Any questions or concerns before signing up?
-                      <br />
-                      Let us know and we'll be happy to talk to you!
-                    </p>
-                    <address>
+        <!-- New contact form code here -->
+        <div class="contact-form">
+            <h3>Contact Us</h3>
+            <form>
+               <label for="contact-name">Your Name</label>
+               <input type="text" id="contact-name" placeholder="Your Name" />
+          
+               <label for="contact-message">Message</label>
+               <textarea id="contact-message" placeholder="Message"></textarea>
+          
+               <button type="submit">Submit</button>
+              </form>
+          </div>
+        <!-- End new contact form -->
+
+                    <div>
+                        <h3>Run Buddy</h3>
+                        <p>
+                            Any questions or concerns before signing up?
+                            <br />
+                            Let us know and we'll be happy to talk to you!
+                        </p>
+                        <address>
                         55 Main Street <br/>
                         Some Town, Ca <br/>
                         12345<br />
                         P: 555.RUN.BUDZ (555.786.2839)<br/>
                         E: <a href="mailto:info@runbuddy.io">info@runbuddy.io</a>
-                      </address>
+                        </address>
+                    </div>
                   </div>
             </section>
   
