fixed missing section tags

--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
                       </div>
                     </div>
                 </div>
-
+              </section>
   
         <!-- "meet the trainers" section -->
             <section id="your-trainers">
@@ -250,7 +250,7 @@
                           frameborder="0" style="border:0" allowfullscreen></iframe>
                       
                       </div>
-  
+            </section>
          <!-- footer -->
             <footer>
                 <h2>❤️ Made with love by Run Buddy.</h2>
